@@ -6,6 +6,7 @@ import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -38,7 +39,7 @@ public class AnonymousFunctions {
                         }
                     }
                     return res;
-                })).toList();
+                })).collect(toList());
         System.out.println(strings);
         /* List<String> sortedWithA = Arrays.stream(args)
                 .map(String::toLowerCase)
@@ -47,5 +48,23 @@ public class AnonymousFunctions {
                 .sorted(Map.Entry.<String, Long>comparingByValue(reverseOrder()).thenComparing(Map.Entry.comparingByKey()))
                 .limit(7)
                 .map(Map.Entry::getKey).toList();*/
+        // createArray
+        BiFunction<Integer, Integer, int[][]> createArrays = (Integer p1, Integer p2) -> {
+            int[][] arrays = new int[p1][p2];
+            for (int i = 0; i < p1; i++) {
+                int[] innerArr = new int[p2];
+                arrays[i] = innerArr;
+            }
+            return arrays;
+        };
+        createArrays.apply(10,10);
+
+        // compose
+        BiFunction<Function<String, String>, Function<String, String>, Function<String, String>> compose = (p1, p2) -> {
+            return p1.apply(p2.apply());
+        };
+        Function<String, String> first = s -> "'" + s + "'";
+        Function<String, String> second = s -> "-" + s + "-";
+        compose.apply(first, second);
     }
 }
